--- a/build.xml
+++ b/build.xml
@@ -22,5 +22,17 @@
       <!-- Retrieve the contents listed in the file codepkg/package.xml into the codepkg directory -->
       <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="src" unpackaged="src/package.xml"/>
     </target>
+	
+		 <!-- Shows deploying code with no TestLevel sepcified -->
+    <target name="deployToProd">
+		<delete includeemptydirs="true">
+			<fileset dir="src/classes">
+				<include name="**/ShowAccountsService.cls"/> 
+				<include name="**/ShowAccountsService.cls-meta.xml"/> 
+			</fileset>			
+		</delete>
+		
+      <sf:deploy username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="src" rollbackOnError="true"/>
+    </target>
 
 </project>
